<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".activity.OmbaoActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/materialToolbar_home_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#3f51b5"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:title="@string/brain_challenge_activity_title"
        app:titleTextColor="@color/white" />

    <LinearLayout
        android:layout_width="374dp"
        android:layout_height="453dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.567"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialToolbar_home_menu"
        app:layout_constraintVertical_bias="0.088">

        <com.ronald.ombao.activity.CustomImageViewForZigZag
            android:layout_width="match_parent"
            android:layout_height="68dp" />
        <RadioGroup
            android:id="@+id/radio_group_selected"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp">

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="3dp"
                android:background="@android:color/transparent"
                app:buttonTint="@color/light_sky_blue"
                android:text="@string/lose_things" />

            <androidx.appcompat.widget.AppCompatRadioButton
                android:background="@android:color/transparent"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_marginHorizontal="3dp"
                app:buttonTint="@color/light_sky_blue"
                android:text="@string/remember_names"/>

            <androidx.appcompat.widget.AppCompatRadioButton
                android:background="@android:color/transparent"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_marginHorizontal="3dp"
                app:buttonTint="@color/light_sky_blue"
                android:text="@string/learn_things"/>

            <androidx.appcompat.widget.AppCompatRadioButton
                android:background="@android:color/transparent"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_marginHorizontal="3dp"
                app:buttonTint="@color/light_sky_blue"
                android:text="@string/keep_track" />
        </RadioGroup>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/next_button_title"
            app:backgroundTint="#3f51b5"
            app:cornerRadius="2dp" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>